# Build_Job_C-

./: CMakeLists.txt  Jenkinsfile  README.md
include/: MyCode.h
src/: MyCode.cpp  main.cpp
tests/: example_test.cpp
